--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,10 +1,6 @@
+# config/cable.yml
 development:
-  adapter: async
-
-test:
-  adapter: test
+  adapter: solid_cable
 
 production:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: gym_movement_production
+  adapter: solid_cable
